# gtakrs

./: .gitignore  README.txt
gtakrs/: Array.h  AssetManager.cpp  AssetManager.h  Audio.cpp  Audio.h  Block.cpp  Block.h  Bullet.h  CMakeLists.txt  Collision_Detaction.cpp  Collision_Detaction.h  Collision_Detection.cpp  Collision_Detection.h  ControlsState.cpp  ControlsState.h  DEFINITIONS.h  Factory.h  Game.cpp  Game.h  Hacking.cpp  Hacking.h  InputManager.cpp  InputManager.h  MainMenuState.cpp  MainMenuState.h  Map.cpp  Map.h  Mappy.cpp  Mappy.h  Mission.cpp  Mission.h  Movement.cpp  Movement.h  NPC_NPV.h  Npc.cpp  Npc.h  NpcCar.cpp  NpcCar.h  Npv.cpp  Npv.h  (+37 more)
gtakrs/Resources/res/: Background_map2.ai  GTAKRS_LOGO.ai  MAP.map  MAP2.map  MAP_TEST.map  Map.json  Splash Background.ai  TILESET.ai  Walk.psd  dead.ai  mission_tile.ai  stats.ai  wasted.ai
gtakrs/Resources/res/Vehicles/: model3.ai
gtakrs/Resources/res/city_layers/: city.ai
gtakrs/Resources/res/menus/: Buttons.ai  Controls.ai  Game Title.ai  wasted-01.png.tmp$$  wasted.ai
gtakrs/Resources/res/mission_1/: Mission_1.ai
